tests/snapshots/sfc/ts/patches__let_variable_increment_in_handler.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 196
expression: ts_output
---
import { defineComponent as _defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString, unref as _unref } from "vue"


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

let value = $ref(10)

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("button", {
      onClick: _cache[0] || (_cache[0] = ($event: any) => (value.value++))
    }, _toDisplayString(_unref(value)), 1 /* TEXT */))
}
}

})
