tests/snapshots/sfc/ts/patches__multiline_arrow_function_in_event_handler.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 196
expression: ts_output
---
import { defineComponent as _defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

import { ref } from 'vue'

export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const count = ref(0)

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("button", {
      onClick: _cache[0] || (_cache[0] = () => {
      const newValue = count.value + 1;
      count.value = _ctx.newValue;
      console.log('incremented');
    })
    }, "Increment"))
}
}

})
